# GuarduauxLang

./: CMakeLists.txt
doc/: .~lock.TKOM_v1.docx#  TKOM_dok_koncowa.docx  TKOM_v1.docx
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
src/: .code.kate-swp  AddExpression.h  AssignStatement.h  AssignableExpression.h  BlockStatement.h  Exception.h  Expresion.h  ForEachStatement.h  ForStatement.h  FuncCall.h  FuncDef.h  IfStatement.h  Input.cpp  Input.h  Lexer.cpp  Lexer.h  LogicExpression.h  MultipExpression.h  Parser.cpp  Parser.h  PeriodicFuncCall.h  Program.h  RelatExpression.h  Return.h  SimpleAssnblExpression.h  SimpleLogicExpression.h  Statement.h  Token.h  TokenTypeTable.cpp  Variable.cpp  Variable.h  code  main.cpp
src/Expresions/: AddExpression.h  AndExpression.h  AssignableExpression.h  Expresion.h  LogicExpression.h  MultipExpression.cpp  MultipExpression.h  RelatExpression.h  SimpleAssnblExpression.h  SimpleLogicExpression.h
src/Graphic/: Box.cpp  Box.h  Cylinder.cpp  Cylinder.h  GraphicObject.h  Shader.cpp  Shader.h  shader.vert
src/Lexer/: Input.h  Lexer.cpp  Lexer.h
src/Parser/: Parser.cpp  Parser.h
src/Program/: Context.cpp  Context.h  Exception.h  FuncDef.h  GraphicContext.cpp  GraphicContext.h  Program.cpp  Program.h  Return.h  Variable.cpp  Variable.h
src/Statements/: AssignStatement.h  BlockStatement.h  ChngcolGraphFunc.h  DrawGraphicFunc.h  ForEachStatement.h  ForStatement.h  FuncCall.h  GraphFunc.h  IfStatement.h  MoveGraphFunc.h  PeriodicFuncCall.h  ReturnStatement.h  ScaleGraphFunc.h  Statement.h
src/Token/: Token.h  TokenType.h  TokenTypeTable.cpp  TokenTypeTable.h
tests/: expressions_test.cpp  lexer_test.cpp  parser_tests.cpp  program_test.cpp
